# fifthlang_cpp

./: .gitignore  CMakeLists.txt  Makefile  conanfile.txt
include/: common.hpp  env.hpp  expression_stack.hpp  function_wrapper.hpp  scope.hpp  type.hpp
src/: Env.cpp  Env.h  expression_stack.cpp  fifth.cf  fifth.l  fifth.tab.cc  fifth.tab.hh  fifth.y  fifth.yy.cc  scope.cpp  type.cpp
test/: EnvTest.cpp  function_wrapper_test.cpp
test/examples/: test1.5th  test2.5th
